--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,10 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   intl: ^0.16.1
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  gradient_app_bar: ^0.1.3
   cupertino_icons: ^0.1.3
 
 dev_dependencies:
